# GATEWAY-CONTRACT-RUST

./: .gitignore  package.json
contract/: Cargo.toml  deploy.sh
contract/neardev/: dev-account  dev-account.env
contract/src/: konnadex_processor.rs
integration-tests/: package-lock.json  package.json
integration-tests/src/: main.ava.ts
